# alpaca-trader

./: .env.example  .gitignore  Dockerfile  Dockerfile.dashboard  Dockerfile.optimized-bot  Dockerfile.yfinance-db  README.md  docker-compose.yml  ensemble_ml_strategy_README.md  ensemble_ml_training_guide.md  ensemble_strategy_optimization_README.md  main.py  optimize_ml_models.py  optimize_ml_models_simple.py  optimize_strategies.py  optimized_strategy_guide.md  pyproject.toml  rebuild_containers.sh  requirements.txt  run_ensemble_ml_bot.py  run_ensemble_optimizer.py  run_optimized_bot.py  run_optimized_bot_market_hours.py  run_strategy_optimizer.py  setup.bat  setup.sh  start_trading_system.sh  start_trading_with_ensemble.py  start_trading_with_optimization.py  strategy_optimization_README.md  test_account.py  test_ensemble_strategy.py  test_ml_strategy.py  test_setup.py  train_ensemble_models.py  train_ml_model.py  train_optimized_ensemble.py  train_optimized_models.py  update_containers.sh  update_docker_containers.sh
config/: __init__.py  config.py  optimized_config.py
data/: market_data.db
data/cache/: AAPL_recent.csv  AMZN_recent.csv  GOOGL_recent.csv  META_recent.csv  MSFT_recent.csv
models/: README.md  ensemble_weights_optimized.txt
src/: __init__.py  bot.py  dashboard.py  dashboard_config.py  data.py  ensemble_ml_strategy.py  feature_engineering.py  logger.py  ml_models.py  notifications.py  scheduler.py  strategies.py  strategy_base.py  strategy_optimizer.py  streamlit_app.py  trader.py  yfinance_data.py  yfinance_db_client.py  yfinance_db_service.py
